Fixed Tabs on Scroll (both Peel & non-Peel); Element z-index fix

--- a/css/forum.css
+++ b/css/forum.css
@@ -459,6 +459,11 @@ body
   /*max-height: 320px;*/
 }
 
+.cropView:hover,
+.postPhoto:hover {
+  cursor: pointer;
+}
+
 @media all and (min-width: 600px) {
   .cropView {
     max-height: 300px;
@@ -764,11 +769,10 @@ input:focus + button {
 #peelWatchOnTVButton {
   position: absolute;
   right: 0;
-  top: 11px;
+  top: 13px;
   width: 117px;
   height: 28px;
   margin-right: 2%;
-  /*padding: 6px 9px;*/
   border: 1px solid rgb(87,87,87);
   color: rgb(90,90,90);
   font-size: 14px;
@@ -779,7 +783,7 @@ input:focus + button {
   color: rgb(90,90,90);
   font-size: 14px;
   font-weight: bolder;
-  vertical-align: -80%;
+  vertical-align: -90%;
 }
 
 /* - - - 'New Content Available' indicator - - - */
@@ -995,7 +999,7 @@ button:hover {
   height: 100%;
   float: left;
   text-align: center;
-  z-index: 10;
+  z-index: 2;
 }
 
 .grid-col-alt {
@@ -1550,17 +1554,6 @@ img-crop canvas {
   background-color: rgb(248,248,248);
 }
 
-.fixTabContainer {
-  text-align: center;
-  font-size: 1.0em;
-  background-color: rgb(248, 248, 248);
-  /*color: rgb(59, 166, 252);*/
-  font-weight:500;
-  line-height:1.5;
-  height: 40px;
-  background-color: rgb(248,248,248);
-}
-
 .tabName {
   vertical-align: -50%;
   font-size: 18px;
@@ -1595,7 +1588,7 @@ img-crop canvas {
   color: rgb(22,189,231);
 }
 
-.fixTabs {
+.fixTabsPeel {
   position: fixed;
   top: 54px;
   width: 100%;
@@ -1603,8 +1596,22 @@ img-crop canvas {
   z-index: 10010;
 }
 
-.inputBase {
-  border-bottom: 3px solid rgb(192,210,214);
+.fixTabs {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  max-width: 768px;
+  z-index: 10010;
+}
+
+.fixTabContainer {
+  text-align: center;
+  font-size: 1.0em;
+  background-color: rgb(248, 248, 248);
+  font-weight:500;
+  line-height:1.5;
+  height: 40px;
+  background-color: rgb(248,248,248);
 }
 
 .topicSharingButtonsRow {
@@ -1792,7 +1799,7 @@ img-crop canvas {
 
 #inputControls {
   /*position: relative;*/
-  /*z-index: 0;*/
+  z-index: 1;
 }
 
 .moreRepliesContainer {
